swagger installation
